--- a/endnote.bib
+++ b/endnote.bib
@@ -406,20 +406,6 @@ http://dx.doi.org/10.18637/jss.v080.i01},
 }
 
 
-@article{wiecki_hddm_2013,
-	title = {{HDDM}: Hierarchical Bayesian estimation of the Drift-Diffusion Model in Python},
-	volume = {7},
-	url = {https://www.readcube.com/articles/10.3389%2Ffninf.2013.00014},
-	doi = {10.3389/fninf.2013.00014},
-	shorttitle = {{HDDM}},
-	abstract = {The diffusion model is a commonly used tool to infer latent psychological processes underlying decision-making, and to link them to neural mechanisms based on response times. Although efficient open source software has been made available to quantitatively fit the model to data, current estimation methods require an abundance of response time measurements to recover meaningful parameters, and only provide point estimates of each parameter. In contrast, hierarchical Bayesian parameter estimation methods are useful for enhancing statistical power, allowing for simultaneous estimation of individual subject parameters and the group distribution that they are drawn from, while also providing measures of uncertainty in these parameters in the posterior distribution. Here, we present a novel Python-based toolbox called {HDDM} (hierarchical drift diffusion model), which allows fast and flexible estimation of the the drift-diffusion model and the related linear ballistic accumulator model. {HDDM} requires fewer data per subject/condition than non-hierarchical methods, allows for full Bayesian data analysis, and can handle outliers in the data. Finally, {HDDM} supports the estimation of how trial-by-trial measurements (e.g., {fMRI}) influence decision-making parameters. This paper will first describe the theoretical background of the drift diffusion model and Bayesian inference. We then illustrate usage of the toolbox on a real-world data set from our lab. Finally, parameter recovery studies show that {HDDM} beats alternative fitting methods like the χ2-quantile method as well as maximum likelihood estimation. The software and documentation can be downloaded at: http://ski.clps.brown.edu/hddm\_docs/},
-	journaltitle = {Frontiers in Neuroinformatics},
-	author = {Wiecki, Thomas V. and Sofer, Imri and Frank, Michael J.},
-	urldate = {2020-06-11},
-	date = {2013},
-	langid = {english}
-}
-
 @article{kirby_bootes_2013,
 	title = {{BootES}: An R package for bootstrap confidence intervals on effect sizes},
 	volume = {45},
@@ -435,6 +421,47 @@ http://dx.doi.org/10.18637/jss.v080.i01},
 	author = {Kirby, Kris N. and Gerlanc, Daniel},
 	urldate = {2020-06-24},
 	date = {2013-12-01},
+	langid = {english}
+}
+
+
+@article{anderson_visual_2011,
+	title = {The Visual Impact of Gossip},
+	volume = {332},
+	rights = {Copyright © 2011, American Association for the Advancement of Science},
+	issn = {0036-8075, 1095-9203},
+	url = {https://science.sciencemag.org/content/332/6036/1446},
+	doi = {10.1126/science.1201574},
+	abstract = {Gossip is a form of affective information about who is friend and who is foe. We show that gossip does not influence only how a face is evaluated—it affects whether a face is seen in the first place. In two experiments, neutral faces were paired with negative, positive, or neutral gossip and were then presented alone in a binocular rivalry paradigm (faces were presented to one eye, houses to the other). In both studies, faces previously paired with negative (but not positive or neutral) gossip dominated longer in visual consciousness. These findings demonstrate that gossip, as a potent form of social affective learning, can influence vision in a completely top-down manner, independent of the basic structural features of a face.
+Negative gossip about a person renders that person’s face more visible to the onlooker.
+Negative gossip about a person renders that person’s face more visible to the onlooker.},
+	pages = {1446--1448},
+	number = {6036},
+	journaltitle = {Science},
+	author = {Anderson, Eric and Siegel, Erika H. and Bliss-Moreau, Eliza and Barrett, Lisa Feldman},
+	urldate = {2020-07-12},
+	date = {2011-06-17},
 	langid = {english},
-	file = {Springer Full Text PDF:/home/hcp4715/Zotero/storage/N3S8VCEQ/Kirby and Gerlanc - 2013 - BootES An R package for bootstrap confidence inte.pdf:application/pdf}
+	pmid = {21596956},
+	note = {Publisher: American Association for the Advancement of Science
+Section: Report}
+}
+
+@article{gantman_moral_2014,
+	title = {The moral pop-out effect: Enhanced perceptual awareness of morally relevant stimuli},
+	volume = {132},
+	issn = {0010-0277},
+	url = {http://www.sciencedirect.com/science/article/pii/S0010027714000328},
+	doi = {10.1016/j.cognition.2014.02.007},
+	shorttitle = {The moral pop-out effect},
+	abstract = {People perceive religious and moral iconography in ambiguous objects, ranging from grilled cheese to bird feces. In the current research, we examined whether moral concerns can shape awareness of perceptually ambiguous stimuli. In three experiments, we presented masked moral and non-moral words around the threshold for conscious awareness as part of a lexical decision task. Participants correctly identified moral words more frequently than non-moral words—a phenomenon we term the moral pop-out effect. The moral pop-out effect was only evident when stimuli were presented at durations that made them perceptually ambiguous, but not when the stimuli were presented too quickly to perceive or slowly enough to easily perceive. The moral pop-out effect was not moderated by exposure to harm and cannot be explained by differences in arousal, valence, or extremity. Although most models of moral psychology assume the initial perception of moral stimuli, our research suggests that moral beliefs and values may shape perceptual awareness.},
+	pages = {22--29},
+	number = {1},
+	journaltitle = {Cognition},
+	shortjournal = {Cognition},
+	author = {Gantman, Ana P. and Van Bavel, Jay J.},
+	urldate = {2020-07-12},
+	date = {2014-07-01},
+	langid = {english},
+	keywords = {Ambiguity, Awareness, Morality, Perception, Vision}
 }
